--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -719,6 +719,10 @@
   "SearchPage.schemaMapSearch": "map search",
   "SearchPage.schemaTitle": "Search results for {searchAddress} | {siteTitle}",
   "SearchPage.searchError": "Search failed. Please try again.",
+  "TestPage.schemaDescription": "Showing search results (for test)",
+  "TestPage.schemaMapSearch": "map search (for test)",
+  "TestPage.schemaTitle": "Search results for {searchAddress} | {siteTitle}  (for test)",
+  "TestPage.searchError": "Search failed. Please try again. (for test)",
   "SearchResultsPanel.nextPage": "Next page",
   "SearchResultsPanel.previousPage": "Previous page",
   "SectionHero.browseButton": "Browse saunas",
