feat: ショップ登録画面を表示するために、URLパスの追加・ショップ登録ページテキストの追加・AuthenticationShopPage内部のクラス名の置き換えを行った

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -35,6 +35,25 @@
   "AuthenticationPage.verifyEmailClose": "LATER",
   "AuthenticationPage.verifyEmailText": "Thanks for signing up! There's one quick step left. To be able to contact you, we need you to verify your email address. Please click the link we sent to {email}.",
   "AuthenticationPage.verifyEmailTitle": "{name}, check your inbox to verify your email",
+  "AuthenticationShopPage.emailAlreadyInUse": "An account with this email address already exists. Try logging in instead.",
+  "AuthenticationShopPage.fixEmail": "Whoops, typo in your email? {fixEmailLink}.",
+  "AuthenticationShopPage.fixEmailLinkText": "Fix it",
+  "AuthenticationShopPage.loginFailed": "The email and password you entered did not match our records. Please double-check and try again.",
+  "AuthenticationShopPage.loginLinkText": "Login",
+  "AuthenticationShopPage.resendEmail": "Didn't get the email? {resendEmailLink}.",
+  "AuthenticationShopPage.resendEmailLinkText": "Resend it",
+  "AuthenticationShopPage.resendFailed": "Resending verification email failed. Please try again.",
+  "AuthenticationShopPage.resendFailedTooManyRequests": "The maximum of 5 verification emails has been reached. Please try again tomorrow.",
+  "AuthenticationShopPage.schemaTitleLogin": "Log in | {siteTitle}",
+  "AuthenticationShopPage.schemaTitleSignup": "Sign up | {siteTitle}",
+  "AuthenticationShopPage.sendingEmail": "Sending verification email…",
+  "AuthenticationShopPage.signupFailed": "Signup failed. Please make sure all the information you entered is correct and try again.",
+  "AuthenticationShopPage.signupFailedEmailAlreadyTaken": "An account with this email address already exists. Try logging in instead.",
+  "AuthenticationShopPage.signupLinkText": "Sign up",
+  "AuthenticationShopPage.termsHeading": "Terms of Service",
+  "AuthenticationShopPage.verifyEmailClose": "LATER",
+  "AuthenticationShopPage.verifyEmailText": "Thanks for signing up! There's one quick step left. To be able to contact you, we need you to verify your email address. Please click the link we sent to {email}.",
+  "AuthenticationShopPage.verifyEmailTitle": "{name}, check your inbox to verify your email",
   "Avatar.bannedUserDisplayName": "Banned user",
   "Avatar.deletedUserDisplayName": "Deleted user",
   "BookingBreakdown.baseUnitDay": "{unitPrice} * {quantity, number} {quantity, plural, one {day} other {days}}",
