feat: ショップ用のプロフィール設定ページに関してファイルパス・変数名を変更し、ページのducksを追加し、翻訳を追加した

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -690,6 +690,9 @@
   "ProfileSettingsPage.heading": "Profile settings",
   "ProfileSettingsPage.title": "Profile settings",
   "ProfileSettingsPage.viewProfileLink": "View your profile",
+  "ProfileSettingsShopPage.heading": "Profile settings",
+  "ProfileSettingsShopPage.title": "Profile settings",
+  "ProfileSettingsShopPage.viewProfileLink": "View your profile",
   "ResponsiveImage.noImage": "No image",
   "ReviewForm.reviewContentLabel": "Leave a review",
   "ReviewForm.reviewContentPlaceholder": "Describe your experience…",
