feat: リスティング設定ページのアクティビティ編集パネルの変数名を変更し、パスと翻訳を追加した

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -154,6 +154,8 @@
   "DateInput.closeDatePicker": "Close",
   "DateInput.defaultPlaceholder": "Date input",
   "DateInput.screenReaderInputMessage": "Date input",
+  "EditListingActivityPanel.title": "Edit the availability of {listingTitle}",
+  "EditListingActivityPanel.createListingTitle": "When is it available?",
   "EditListingAvailabilityForm.fetchMonthDataFailed": "Oops, couldn't load data for {month}, please try again.",
   "EditListingAvailabilityForm.availableDay": "Available",
   "EditListingAvailabilityForm.blockedDay": "Not available",
