--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -245,6 +245,7 @@
   "EditListingWizard.saveNewPricing": "Next: Availability",
   "EditListingWizard.tabLabelDescription": "Description",
   "EditListingWizard.tabLabelFeatures": "Amenities",
+  "EditListingWizard.tabLabelActivity": "Activity",
   "EditListingWizard.tabLabelAvailability": "Availability",
   "EditListingWizard.tabLabelLocation": "Location",
   "EditListingWizard.tabLabelPhotos": "Photos",
